Tested payments and corrected quantity changes