@@ -98,9 +98,13 @@ public class CartServiceImpl implements CartService {
         Stream<CartDTO> cartsStream = carts.stream()
                 .map(cart -> {
                     CartDTO cartDTO = modelMapper.map(cart, CartDTO.class);
-                    List<ProductDTO> products = cart.getCartItems().stream()
-                            .map(product -> modelMapper.map(product.getProduct(), ProductDTO.class))
-                            .toList();
+
+                    List<ProductDTO> products = cart.getCartItems().stream().map(cartItem -> {
+                        ProductDTO productDTO = modelMapper.map(cartItem.getProduct(), ProductDTO.class);
+                        productDTO.setQuantity(cartItem.getQuantity());
+                        return productDTO;
+                    }).collect(Collectors.toList());
+
                     cartDTO.setProducts(products);
                     return cartDTO;
                 });
